--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,16 +1,13 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      {{ if isset .Site.Params "gravatarHash" }}
-        <img src="https://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}?s=200"
-             alt="gravatar" title="{{ .Site.Author.name }}">
-      {{ end }}
-      <h1>{{ .Site.Author.name }}</h1>
+        <a href="{{ "/" | absURL }}"><img src="/logo.png"
+             alt="Logo" title="{{ .Site.Author.name }}"></a>
+      <h1><a href="{{ "/" | absURL }}">{{ .Site.Author.name }}</a></h1>
       {{ with .Site.Params.tagline }}<p class="lead">{{ . | markdownify }}</p>{{ end }}
     </div>
 
     <ul class="sidebar-nav">
-      <li class="sidebar-nav-item"><a href="{{ "/" | absURL }}">{{ if isset .Site.Params "home"}}{{ .Site.Params.home }}{{ else }}Blog{{ end }}</a></li>
       {{ range .Site.Menus.main }}
       <li class="sidebar-nav-item">{{ .Pre }}<a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
       {{end}}
@@ -26,7 +23,10 @@
       {{ with .Site.Params.facebook }}<a href="{{ . }}"><i class="fa fa-facebook-square fa-3x"></i></a>{{ end }}
       {{ with .Site.Params.twitter }}<a href="{{ . }}"><i class="fa fa-twitter-square fa-3x"></i></a>{{ end }}
       {{ with .Site.Params.youtube }}<a href="{{ . }}"><i class="fa fa-youtube-square fa-3x"></i></a>{{ end }}
-      {{ if .Site.Params.rss }}<a href="{{ "/index.xml" | absURL }}" type="application/rss+xml"><i class="fa fa-rss-square fa-3x"></i></a>{{ end }}
+      {{ if .Site.Params.rss }}<a href="{{ .RSSlink }}" type="application/rss+xml"><i class="fa fa-rss-square fa-3x"></i></a>{{ end }}
+      <a href="https://uberspace.de" alt="Link zu Uberspace"><img src="/badge-white.png"
+           href="https://uberspace.de" height=3em alt="" style="height: 3em; vertical-align:middle; display: inline-block"; alt="Uberspace Banner">
+      </a>
       </li>
     </ul>
 
