--- a/static/css/poole-overrides.css
+++ b/static/css/poole-overrides.css
@@ -1,1 +1,25 @@
-pre{padding:0}
+pre {
+    padding: 0
+}
+
+body {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
+code {
+    white-space: pre;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+.lead {
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
