--- a/static/css/hyde-overrides.css
+++ b/static/css/hyde-overrides.css
@@ -14,6 +14,26 @@
     margin: 0 auto .5rem auto;
 }
 
+.myfa {
+    font-size: 150%;
+    color: #fff;
+}
+
+.myfa-key {
+    color: #8a0000;
+    font-size: 1.5em;
+}
+
+.uberspace-logo {
+    height: 1em;
+    vertical-align: text-top;
+    display: inline-block
+}
+
+.fa-stack {
+    vertical-align: top
+}
+
 .sidebar-about h1:hover, h1:focus {
     text-decoration: underline
 }
