--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -17,9 +17,12 @@
 			<li class="sidebar-nav-item">
 			{{ with .Site.Params.github }}<a href="{{ . }}"><i class="fa fa-github-square fa-3x"></i></a>{{ end }}
 			{{ with .Site.Params.keybase }}
+			<a href="{{ . }}">
 			<i class="myfa fa-stack fa-lg">
   				<i class="fa fa-square fa-stack-2x"></i>
   				<i class="fa fa-key fa-stack-1x myfa-key"></i>
+			</i>
+			</a>
 			</i>{{ end }}
 			{{ with .Site.Params.bitbucket }}<a href="{{ . }}"><i class="fa fa-bitbucket-square fa-3x"></i></a>{{ end }} 
 			{{ with .Site.Params.stackOverflow }}<a href="{{ . }}"><i class="fa fa-stack-overflow fa-3x"></i></a>{{ end }} 
