--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,13 +15,15 @@
 		
 		<ul class="sidebar-nav">
 			<li class="sidebar-nav-item">
-			{{ with .Site.Params.github }}<a href="{{ . }}"><i class="icon icon-github-square icon-3x"></i></a>{{ end }}
+			{{ with .Site.Params.github }}<a href="{{ . }}"><i class="fa fa-github-square fa-3x"></i></a>{{ end }}
 			{{ with .Site.Params.keybase }}
 			<a href="{{ . }}">
-			<i class="myfa icon-stack icon-lg">
-  				<i class="icon icon-square icon-stack-2x"></i>
-  				<i class="icon icon-key icon-stack-1x myfa-key"></i>
-			</i></a>{{ end }}
+			<i class="myfa fa-stack fa-lg">
+  				<i class="fa fa-square fa-stack-2x"></i>
+  				<i class="fa fa-key fa-stack-1x myfa-key"></i>
+			</i>
+			</a>
+			</i>{{ end }}
 			{{ with .Site.Params.bitbucket }}<a href="{{ . }}"><i class="fa fa-bitbucket-square fa-3x"></i></a>{{ end }} 
 			{{ with .Site.Params.stackOverflow }}<a href="{{ . }}"><i class="fa fa-stack-overflow fa-3x"></i></a>{{ end }} 
 			{{ with .Site.Params.linkedin }}<a href="{{ . }}"><i class="fa fa-linkedin-square fa-3x"></i></a>{{ end }} 
@@ -29,7 +31,7 @@
 			{{ with .Site.Params.facebook }}<a href="{{ . }}"><i class="fa fa-facebook-square fa-3x"></i></a>{{ end }} 
 			{{ with .Site.Params.twitter }}<a href="{{ . }}"><i class="fa fa-twitter-square fa-3x"></i></a>{{ end }} 
 			{{ with .Site.Params.youtube }}<a href="{{ . }}"><i class="fa fa-youtube-square fa-3x"></i></a>{{ end }}
-			{{ if .Site.Params.rss }}<a href="{{ .RSSLink }}" type="application/rss+xml"><i class="icon icon-rss-square icon-3x"></i></li></a>{{ end }}
+			{{ if .Site.Params.rss }}<a href="{{ .RSSLink }}" type="application/rss+xml"><i class="fa fa-rss-square fa-3x"></i></li></a>{{ end }}
 			</li>
 		</ul>
 		{{ if isset .Site.Params "flattr" }}
@@ -51,4 +53,5 @@
 			Powered by <a href="https://uberspace.de" alt="Link zu Uberspace"><img src="/uberspacelogowhite.png" class="uberspace-logo"
 				href="https://uberspace.de" alt="Uberspace Banner">
 			</a> <a href="http://gohugo.io">, Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p>
+		</div>
 	</div>
