--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,12 +15,12 @@
 		
 		<ul class="sidebar-nav">
 			<li class="sidebar-nav-item">
-			{{ with .Site.Params.github }}<a href="{{ . }}"><i class="fa fa-github-square fa-3x"></i></a>{{ end }}
+			{{ with .Site.Params.github }}<a href="{{ . }}"><i class="icon icon-github-square icon-3x"></i></a>{{ end }}
 			{{ with .Site.Params.keybase }}
 			<a href="{{ . }}">
-			<i class="myfa fa-stack fa-lg">
-  				<i class="fa fa-square fa-stack-2x"></i>
-  				<i class="fa fa-key fa-stack-1x myfa-key"></i>
+			<i class="myfa icon-stack icon-lg">
+  				<i class="icon icon-square icon-stack-2x"></i>
+  				<i class="icon icon-key icon-stack-1x myfa-key"></i>
 			</i>
 			</a>
 			</i>{{ end }}
@@ -31,8 +31,7 @@
 			{{ with .Site.Params.facebook }}<a href="{{ . }}"><i class="fa fa-facebook-square fa-3x"></i></a>{{ end }} 
 			{{ with .Site.Params.twitter }}<a href="{{ . }}"><i class="fa fa-twitter-square fa-3x"></i></a>{{ end }} 
 			{{ with .Site.Params.youtube }}<a href="{{ . }}"><i class="fa fa-youtube-square fa-3x"></i></a>{{ end }}
-			{{ if .Site.Params.rss }}<a href="{{ .RSSLink }}" type="application/rss+xml"><i class="fa fa-rss-square fa-3x"></i></li></a>{{ end }}
-			</li>
+			{{ if .Site.Params.rss }}<a href="{{ .RSSLink }}" type="application/rss+xml"><i class="icon icon-rss-square icon-3x"></i></li></a>{{ end }}			</li>
 		</ul>
 		{{ if isset .Site.Params "flattr" }}
 		<p><script id='flattr'>
