--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,7 +2,7 @@
 	<div class="container sidebar-sticky">
 		<div class="sidebar-about">
 			<h1 href="{{ "/" | absURL }}">
-				<img src="/logo.png" alt="Logo" title="{{ .Site.Author.name }}" href="{{ "/" | absURL }}">
+				<img src="/logo.svg" alt="Logo" title="{{ .Site.Author.name }}" href="{{ "/" | absURL }}">
 				<a href="{{ "/" | absURL }}">{{ .Site.Author.name }}</a>
 			</h1>
 		<!--{{ with .Site.Params.tagline }}<p class="lead">{{ . | markdownify }}</p{{ end }}--->
