--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -51,6 +51,6 @@
 		<p>Copyright &copy; {{ now.Format "2006" }} <a href="{{ "/impressum/" | absURL }}">Impressum</a><br/>
 			Powered by <a href="https://uberspace.de" alt="Link zu Uberspace"><img src="/uberspacelogowhite.png" class="uberspace-logo"
 				href="https://uberspace.de" alt="Uberspace Banner">
-			</a> <a href="https://gohugo.io">, Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p>
+			</a>, <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p>
 		</div>
 	</div>
