--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -19,8 +19,10 @@
 			{{ with .Site.Params.keybase }}
 			<a href="{{ . }}">
 			<i class="myfa icon-stack icon-lg">
-  				<i class="icon icon-square icon-stack-2x"></i>
-  				<i class="icon icon-key icon-stack-1x myfa-key"></i>
+  				<i class=""></i>
+				<i>
+					<img src=/keybase.svg style="height:1.75em;">
+			</i>
 			</i>
 			</a>
 			</i>{{ end }}
@@ -47,10 +49,5 @@
 			})("flattr");
 		</script></p>
 		{{ end }}
-		
-		<p>Copyright &copy; {{ now.Format "2006" }} <a href="{{ "/impressum/" | absURL }}">Impressum</a><br/>
-			Powered by <a href="https://uberspace.de" alt="Link zu Uberspace"><img src="/uberspacelogowhite.png" class="uberspace-logo"
-				href="https://uberspace.de" alt="Uberspace Banner">
-			</a>, <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p>
 		</div>
 	</div>
