--- a/static/css/poole-overrides.css
+++ b/static/css/poole-overrides.css
@@ -24,3 +24,9 @@ code {
     hyphens: none;
 }
 
+.sidebar-about{
+    font-family: "Bookman Old Style";
+    font-weight: bolder;
+    font-stretch:ultra-expanded ;
+    font-variant-caps: small-caps;
+}
