--- a/static/css/hyde-overrides.css
+++ b/static/css/hyde-overrides.css
@@ -2,8 +2,11 @@
     display: inline;
     color: #fff;
     margin-top: 0;
-    font-family: "Abril Fatface", serif;
-    font-size: 2.5rem
+    font-size: 2.5rem;
+    font-family: "Bookman Old Style";
+    font-weight: bolder;
+    font-stretch:ultra-expanded ;
+    font-variant-caps: small-caps;
 }
 
 .sidebar-about img {
@@ -48,4 +51,11 @@
 .sidebar {
     padding-top: 0;
     padding-bottom: 0;
+}
+.content {
+    padding-bottom: 0;
+}
+
+.sidebar-about{
+
 }
