footer richtig platziert

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-<div class="content container">
+<div class="content container withfoot">
   <div class="post">
     <h1>{{ .Title }}</h1>
     {{ .Content }}
