--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,5 +1,5 @@
 
-<div class="content" style="padding-top: 0; padding-bottom: 0;">
+<div class="content foot" style="padding-top: 0; padding-bottom: 0;">
 <hr style="margin-bottom: 0; margin-top:0;margin-left: 1em;margin-right: 1em;">
 <p style="font-size: 0.6em;color: grey;margin-bottom: 0;height: 1em;text-align: center">Copyright © 2018 <a href="/impressum">Impressum, </a><a href="/datenschutzerklaerung">Datenschutzerklärung. </a>Powered by <a href="https://uberspace.de" alt="Link zu Uberspace"><img src="/uberspacelogowhite.png" class="uberspace-logo" href="https://uberspace.de" alt="Uberspace Banner">
 			</a>, <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p>
